Lego Editor Change Log
2012/02/?? - 0.52
  *  Fixed a bug with copy/paste of Legos that caused previously edited legos to change and 
		generally behave strangely when a lego was pasted multiple times. 
  *  Allow import of Legos even when schema validation fails

2012/02/12 - 0.51
  *  Improved type distinction between expression types during copy / paste
  *  artf227420 - fixed lucene sort order issues
  *  artf226891 Implemented the ability to store / search / use templates

2012/02/10 - 0.5
  *  Fixed null pointers that could happen with empty measurement values 
  *  Fixed a bug that caused a doubleclick to sometimes not open a lego for editing
  *  Fix memory leaks caused by javafx Bindings
  *  Add 'About Dialog' / version number
  *  Add more icons
  *  artf226891 (partial) Implemented Copy/Paste for Legos, Assertions, D / Q / V and Expressions 
		anywhere they appear
  *  artf227475 Allow rename of lego list
  *  artf227509 Fix consistency of 'pencil' icon in the left list of legos
  *  artf227507 Fixed bound change not allowing save bug